# local-deep-research

./: README.md  class_index.html  function_index.html  index.html  package.json  pyproject.toml  status.json  z_00b964df733809b8___init___py.html  z_00b964df733809b8_base_citation_handler_py.html  z_00b964df733809b8_forced_answer_citation_handler_py.html  z_00b964df733809b8_precision_extraction_handler_py.html  z_00b964df733809b8_standard_citation_handler_py.html  z_0399ed25985b5149___init___py.html  z_0399ed25985b5149_auto_discovery_py.html  z_0399ed25985b5149_base_py.html  z_0399ed25985b5149_openai_base_py.html  z_03f6e3d7ee2a2cbf_database_py.html  z_03f6e3d7ee2a2cbf_settings_py.html  z_042e78e1ede67e2c___init___py.html  z_042e78e1ede67e2c_full_search_py.html  z_042e78e1ede67e2c_local_embedding_manager_py.html  z_042e78e1ede67e2c_meta_search_engine_py.html  z_042e78e1ede67e2c_parallel_search_engine_py.html  z_042e78e1ede67e2c_search_engine_arxiv_py.html  z_042e78e1ede67e2c_search_engine_brave_py.html  z_042e78e1ede67e2c_search_engine_collection_py.html  z_042e78e1ede67e2c_search_engine_ddg_py.html  z_042e78e1ede67e2c_search_engine_elasticsearch_py.html  z_042e78e1ede67e2c_search_engine_exa_py.html  z_042e78e1ede67e2c_search_engine_github_py.html  z_042e78e1ede67e2c_search_engine_google_pse_py.html  z_042e78e1ede67e2c_search_engine_guardian_py.html  z_042e78e1ede67e2c_search_engine_gutenberg_py.html  z_042e78e1ede67e2c_search_engine_library_py.html  z_042e78e1ede67e2c_search_engine_mojeek_py.html  z_042e78e1ede67e2c_search_engine_nasa_ads_py.html  z_042e78e1ede67e2c_search_engine_openalex_py.html  z_042e78e1ede67e2c_search_engine_openlibrary_py.html  z_042e78e1ede67e2c_search_engine_paperless_py.html  z_042e78e1ede67e2c_search_engine_pubchem_py.html  (+468 more)
docs/: CONFIGURATION.md
docs/ci/: workflow-status.md
